@@ -1,6 +1,6 @@
 {
   "name": "simp-fips",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "author": "SIMP Team",
   "summary": "A SIMP module for managing FIPS",
   "license": "Apache-2.0",
@@ -43,35 +43,39 @@
     {
       "operatingsystem": "CentOS",
       "operatingsystemrelease": [
+        "7",
         "8",
-        "7"
+        "9"
       ]
     },
     {
       "operatingsystem": "RedHat",
       "operatingsystemrelease": [
-        "9",
+        "7",
         "8",
-        "7"
+        "9"
       ]
     },
     {
       "operatingsystem": "OracleLinux",
       "operatingsystemrelease": [
+        "7",
         "8",
-        "7"
+        "9"
       ]
     },
     {
       "operatingsystem": "Rocky",
       "operatingsystemrelease": [
-        "8"
+        "8",
+        "9"
       ]
     },
     {
       "operatingsystem": "AlmaLinux",
       "operatingsystemrelease": [
-        "8"
+        "8",
+        "9"
       ]
     }
   ],
